hphp/test/quick/typedef_cyclic.php.expectf

Fatal error: Unknown type or class Foo in %s on line 3
